# book-converter

./: CLAUDE.md  Cargo.toml  README.md
src/: image_processor.rs  main.rs  models.rs  ollama.rs  page_renderer.rs  renderer.rs
