[package]
name = "book-converter"
version = "0.1.0"
authors = ["AI Assistant"]
edition = "2021"
description = "Convert book pages to structured HTML using LLMs."

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
headless_chrome = "1.0"
image = "0.24"
base64 = "0.11"
